# dblp-kgqa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml
config/: demo.schema.json  demo.yml  experiment.schema.json  experiment.yml  services.schema.json  services.yml
scripts/: init_config.py  init_data.py
scripts/generate/: generate_explanations.py  generate_ontology_embeddings.py  generate_questions_embeddings.py
servers/llama/: docker-compose.yml  start.py
servers/runpod/: runpod_llm.py
servers/virtuoso/: docker-compose.yml  init.py
src/dblp_kgqa/: __init__.py
src/dblp_kgqa/demo/: demo.py  main.py  schemas.py
src/dblp_kgqa/experiment/: evaluate.py  logger.py  main.py  schemas.py
src/dblp_kgqa/modules/: schemas.py
src/dblp_kgqa/modules/entity_linker/: api.py  base.py  factory.py  gold.py  mock.py
src/dblp_kgqa/modules/info_extractor/: base.py  factory.py  gold.py  llm.py  llm_prompt.py  mock.py
src/dblp_kgqa/modules/query_executor/: base.py  endpoint.py  factory.py  mock.py
src/dblp_kgqa/modules/query_generator/: base.py  factory.py  llm.py  llm_prompt.py  llm_rag.py  mock.py
src/dblp_kgqa/modules/relation_linker/: base.py  factory.py  full.py  full_schema.py  rag.py
src/dblp_kgqa/pipeline/: factory.py  pipeline.py
src/dblp_kgqa/services/: base.py  dblp_quad.py  embedding.py  factory.py  llm.py  neo4j.py  registry.py
src/dblp_kgqa/utils/: yaml.py
