[project]
name = "dblp-kgqa"
version = "0.1.0"
description = "A semantic parsing-based knowledge graph question answering system for querying DBLP"
authors = [
    { name = "gerba98", email = "lucagerbasi98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=0.3.0",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.3",
    "sparqlwrapper>=2.0.0",
    "gdown>=5.0.0",
    "requests>=2.32",
    "streamlit>=1.57.0",
    "streamlit-ace>=0.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "ruff>=0.14.12",
]

[project.scripts]
dblp-kgqa = "dblp_kgqa.demo.main:main"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
